# BData_lab2

./: CMakeLists.txt  readme.md  report.md
src/: Database.cpp  Database.h  main.cpp
